--- a/분발해 시연아.html
+++ b/분발해 시연아.html
@@ -23,7 +23,7 @@
 
 <div id="menu-items">
 
-
+  <!--이 글은 지워주세여-->
 
     <!--추천 메뉴 -->
     <h2>추천 메뉴</h2>
@@ -31,7 +31,6 @@
 
     <img src="사진/딸기쿠키프라페.png" alt="딸기쿠키프라페.png"
     style="width: 180px; height: 180px; margin: 5px;" >
-   딸기쿠키프라페
 
     <img src="사진/쿠키프라페.png" alt="쿠키프라페.png"
     style="width: 180px; height: 180px; margin: 5px;" >
