--- a/KioskMenu.html
+++ b/KioskMenu.html
@@ -29,19 +29,19 @@
     <h2>추천 메뉴</h2>
 <div class="R-menu">
 
-    <img src="사진/딸기쿠키프라페.png" alt="딸기쿠키프라페.png"
+    <img src="Photo/딸기쿠키프라페.png" alt="딸기쿠키프라페.png"
     style="width: 180px; height: 180px; margin: 5px;" >
 
-    <img src="사진/쿠키프라페.png" alt="쿠키프라페.png"
+    <img src="Photo/쿠키프라페.png" alt="쿠키프라페.png"
     style="width: 180px; height: 180px; margin: 5px;" >
 
-    <img src="/사진/아메리카노.png" alt="아메리카노"
+    <img src="Photo/아메리카노.png" alt="아메리카노"
     style="width: 180px; height: 180px; margin: 5px;" >
 
-    <img src="사진/허니브레드.png" alt="허니브레드.png"
+    <img src="Photo/허니브레드.png" alt="허니브레드.png"
     style="width: 180px; height: 180px; margin: 5px;" >
 
-    <img src="사진/버터버터소금빵.png" alt="버터버터소금빵.png"
+    <img src="Photo/버터버터소금빵.png" alt="버터버터소금빵.png"
     style="width: 180px; height: 180px; margin: 5px;" >
 
   </div>
@@ -50,19 +50,19 @@
   <div class="item coffee">
     <!-- 커피 메뉴 -->
     <h2>커피 메뉴</h2>
-    <img src="사진/에스프레소.png" alt="에스프레소.png" 
+    <img src="Photo/에스프레소.png" alt="에스프레소.png" 
       style="width: 180px; height: 180px; margin: 5px;" >
 
-    <img src="사진/카푸치노.png" alt="카푸치노"
+    <img src="Photo/카푸치노.png" alt="카푸치노"
        style="width: 180px; height: 180px; margin: 5px;" >
 
-    <img src="/사진/아메리카노.png" alt="아메리카노"
+    <img src="Photo/아메리카노.png" alt="아메리카노"
       style="width: 180px; height: 180px; margin: 5px;" >
 
-    <img src="사진/바닐라라떼.png" alt="바닐라라떼"
+    <img src="Photo/바닐라라떼.png" alt="바닐라라떼"
       style="width: 180px; height: 180px; margin: 5px;" >
 
-      <img src="사진/카페라떼.png" alt="카페라떼.png"
+      <img src="Photo/카페라떼.png" alt="카페라떼.png"
       style="width: 180px; height: 180px; margin: 5px;" >
   </div>
 
@@ -71,22 +71,22 @@
     <!-- 스무디&프라페 메뉴 -->
     <h2>스무디&프라페 메뉴</h2>
 
-    <img src="사진/딸기쿠키프라페.png" alt="딸기쿠키프라페.png" 
+    <img src="Photo/딸기쿠키프라페.png" alt="딸기쿠키프라페.png" 
     style="width: 180px; height: 180px; margin: 5px;" >
 
-    <img src="사진/유니콘프라페.png" alt="유니콘프라페.png"
+    <img src="Photo/유니콘프라페.png" alt="유니콘프라페.png"
     style="width: 180px; height: 180px; margin: 5px;" >
 
-    <img src="사진/망고요거트스무디.png" alt="망고요거트스무디.png"
+    <img src="Photo/망고요거트스무디.png" alt="망고요거트스무디.png"
      style="width: 180px; height: 180px; margin: 5px;" >
 
-     <img src="사진/딸기퐁크러쉬.png" alt="딸기퐁크러쉬.png"
+     <img src="Photo/딸기퐁크러쉬.png" alt="딸기퐁크러쉬.png"
      style="width: 180px; height: 180px; margin: 5px;" >
 
-     <img src="사진/쿠키프라페.png" alt="쿠키프라페.pn"
+     <img src="Photo/쿠키프라페.png" alt="쿠키프라페.pn"
      style="width: 180px; height: 180px; margin: 5px;" >
 
-     <img src="사진/녹차프라페.png" alt="녹차프라페.png"
+     <img src="Photo/녹차프라페.png" alt="녹차프라페.png"
      style="width: 180px; height: 180px; margin: 5px;" >
 
   </div>
@@ -95,38 +95,38 @@
   <div class="item ade">
     <!-- 에이드&주스 메뉴 -->
     <h2>에이드&주스 메뉴</h2>
-    <img src="사진/블루레몬에이드.png" alt="블루레몬에이드.png"" 
+    <img src="Photo/블루레몬에이드.png" alt="블루레몬에이드.png"" 
     style="width: 180px; height: 180px; margin: 5px;" >
 
-    <img src="사진/자몽에이드.png" alt="자몽에이드.png"
+    <img src="Photo/자몽에이드.png" alt="자몽에이드.png"
     style="width: 180px; height: 180px; margin: 5px;" >
 
-    <img src="사진/라임모히또.png" alt="라임모히또.png"
+    <img src="Photo/라임모히또.png" alt="라임모히또.png"
     style="width: 180px; height: 180px; margin: 5px;" >
 
-    <img src="사진/딸기주스.png" alt="딸기주스.png"
+    <img src="Photo/딸기주스.png" alt="딸기주스.png"
     style="width: 180px; height: 180px; margin: 5px;" >
 
-    <img src="사진/딸기바나나주스.png" alt="딸기바나나주스.png"
+    <img src="Photo/딸기바나나주스.png" alt="딸기바나나주스.png"
     style="width: 180px; height: 180px; margin: 5px;" >
 
-    <img src="사진/레드오렌지자몽주스.png" alt="레드오렌지자몽주스.png"
+    <img src="Photo/레드오렌지자몽주스.png" alt="레드오렌지자몽주스.png"
     style="width: 180px; height: 180px; margin: 5px;" >
   </div>
 
   <div class="item tea">
     <!-- 티 메뉴 -->
     <h2>티 메뉴</h2>
-   <img src="사진/녹차.png" alt="녹차.png" 
+   <img src="Photo/녹차.png" alt="녹차.png" 
    style="width: 180px; height: 180px; margin: 5px;" >
 
-   <img src="사진/제로복숭아아이스티.png" alt="제로복숭아아이스티.png"
+   <img src="Photo/제로복숭아아이스티.png" alt="제로복숭아아이스티.png"
    style="width: 180px; height: 180px; margin: 5px;" >  
 
-   <img src="사진/얼그레이.png" alt="얼그레이.png"
+   <img src="Photo/얼그레이.png" alt="얼그레이.png"
    style="width: 180px; height: 180px; margin: 5px;" >
 
-   <img src="사진/사과유자차.png" alt="사과유자차.png"
+   <img src="Photo/사과유자차.png" alt="사과유자차.png"
    style="width: 180px; height: 180px; margin: 5px;" >  
 
   </div>
@@ -134,19 +134,19 @@
   <div class="item dessert">
     <!-- 디저트 메뉴 -->
     <h2>디저트 메뉴</h2>
-      <img src="사진/초코무스케익.png" alt="초코무스케익.png" 
+      <img src="Photo/초코무스케익.png" alt="초코무스케익.png" 
       style="width: 180px; height: 180px; margin: 5px;" >
     
-      <img src="사진/티라미수케익.png" alt="티라미수케익.png"
+      <img src="Photo/티라미수케익.png" alt="티라미수케익.png"
       style="width: 180px; height: 180px; margin: 5px;" >
 
-      <img src="사진/허니브레드.png" alt="허니브레드.png"
+      <img src="Photo/허니브레드.png" alt="허니브레드.png"
       style="width: 180px; height: 180px; margin: 5px;" >
 
-      <img src="사진/아이스허니와앙슈.png" alt="아이스허니와앙슈.png"
+      <img src="Photo/아이스허니와앙슈.png" alt="아이스허니와앙슈.png"
       style="width: 180px; height: 180px; margin: 5px;" >
 
-      <img src="사진/버터버터소금빵.png" alt="버터버터소금빵.png"
+      <img src="Photo/버터버터소금빵.png" alt="버터버터소금빵.png"
       style="width: 180px; height: 180px; margin: 5px;" >
   </div>
 </div>
