minsun-상단,하단 합침, 카운트 기능 추가

--- a/KioskMenu.html
+++ b/KioskMenu.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Kiosk</title>
 <link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="MenuList.css">
 </head>
 
 
@@ -151,6 +152,23 @@
   </div>
 </div>
 </div>
+<ul>
+  <div class="box"></div>
+  <div class="bundle_box2_4">
+    <div class="box2">
+      <p class="fontsi">남은 시간<br> <span id="timer"></span> 초</p>
+      <input type="button" value="전체
+삭제" class="box3" id="delect-message">
+    </div>
+    <div class="box4">
+      <p class="fontsi">선택한 상품  &emsp;&emsp;&emsp;&emsp;개</p> 
+      <input type="button" value="           원
+결제하기" class="acpayment" id="pay-message">
+    </div>
+  </div>
+</ul>    
 <script src="script.js"></script>
+<script src="payment.js"></script>
+<script src="timer.js"></script>
 </body>
 </html>
