--- a/KioskMenu.html
+++ b/KioskMenu.html
@@ -20,36 +20,35 @@
     <div class="category" onclick="showCategory('dessert')">디저트</div>
   </div>
 
-    <div id="menu-items">
-        <!--추천 메뉴 -->
-        <h2>추천 메뉴</h2>
-
+  <div id="menu-items">
+    <div class="item decaf">
+      <!--추천 메뉴 -->
+      <h2>추천 메뉴</h2>
       <img src="Photo/딸기쿠키프라페.png" alt="딸기쿠키프라페.png" 
         style="width: 180px; height: 180px; margin: 5px;">
-                
+                  
       <img src="Photo/쿠키프라페.png" alt="쿠키프라페.png" 
         style="width: 180px; height: 180px; margin: 5px;">
 
-
-        <img src="Photo/아메리카노.png" alt="아메리카노"
+      <img src="Photo/아메리카노.png" alt="아메리카노"
         style="width: 180px; height: 180px; margin: 5px;" >
 
-        <img src="Photo/허니브레드.png" alt="허니브레드.png"
+      <img src="Photo/허니브레드.png" alt="허니브레드.png"
         style="width: 180px; height: 180px; margin: 5px;" >
 
-        <img src="Photo/버터버터소금빵.png" alt="버터버터소금빵.png"
+      <img src="Photo/버터버터소금빵.png" alt="버터버터소금빵.png"
         style="width: 180px; height: 180px; margin: 5px;" >
 
-        <img src="Photo/아이스허니와앙슈.png" alt="아이스허니와앙슈.png"
+      <img src="Photo/아이스허니와앙슈.png" alt="아이스허니와앙슈.png"
         style="width: 180px; height: 180px; margin: 5px;" >
 
-        <img src="Photo/아이스허니와앙슈.png" alt="아이스허니와앙슈.png"
+      <img src="Photo/아이스허니와앙슈.png" alt="아이스허니와앙슈.png"
         style="width: 180px; height: 180px; margin: 5px;" >
 
-        <img src="Photo/아이스허니와앙슈.png" alt="아이스허니와앙슈.png"
+      <img src="Photo/아이스허니와앙슈.png" alt="아이스허니와앙슈.png"
         style="width: 180px; height: 180px; margin: 5px;" >
-      </div>
-      <div class="item coffee">
+    </div>
+    <div class="item coffee">
         <!-- 커피 메뉴 -->
         <h2>커피 메뉴</h2>
         <img src="Photo/에스프레소.png" alt="에스프레소.png" 
