--- a/KioskMenu.html
+++ b/KioskMenu.html
@@ -24,9 +24,11 @@
         <!-- 추천 메뉴 -->
         <h2>추천 메뉴</h2>
         <!--이미지 스타일 지우고 클래스명 지정 후 css로옮김-->
-        <img src="Photo/딸기쿠키프라페.png" alt="딸기쿠키프라페.png" class="img">
+        <img src="Photo/딸기쿠키프라페.png" alt="딸기쿠키프라페.png" class="img" >
         <img src="Photo/쿠키프라페.png" alt="쿠키프라페.png" class="img">
-        <img src="Photo/아메리카노.png" alt="아메리카노" class="img">
+        <img src="Photo/녹차프라페.png" alt="녹차프라페.png" class="img">
+        <img src="Photo/블루레몬에이드.png" alt="블루레몬에이드.png" class="img">
+        <img src="Photo/티라미수케익.png" alt="티라미수케익.png" class="img">
         <img src="Photo/허니브레드.png" alt="허니브레드.png" class="img">
         <img src="Photo/버터버터소금빵.png" alt="버터버터소금빵.png" class="img">
         <img src="Photo/아이스허니와앙슈.png" alt="아이스허니와앙슈.png" class="img">
@@ -34,53 +36,69 @@
       <div class="item coffee">
         <!-- 커피 메뉴 -->
         <h2>커피 메뉴</h2>
-        <img src="Photo/에스프레소.png" alt="에스프레소.png" class="img">
-        <img src="Photo/카푸치노.png" alt="카푸치노" class="img">
-        <img src="Photo/아메리카노.png" alt="아메리카노" class="img">
+        <img src="Photo/아이스 아메리카노.png" alt="아이스 아메리카노" class="img">
         <img src="Photo/바닐라라떼.png" alt="바닐라라떼" class="img">
-        <img src="Photo/카페라떼.png" alt="카페라떼.png" class="img">
+        <img src="Photo/카페라떼.png" alt="카페라떼" class="img">
+        <img src="Photo/카푸치노.png" alt="카푸치노" class="img">
+        <img src="Photo/아메리카노.png" alt="아메리카노" class="img"> 
+        <img src="Photo/카페모카.png" alt="카페모카" class="img">
+        <img src="Photo/카라멜마끼아또.png" alt="카라멜마끼아또" class="img">
+        <img src="Photo/에스프레소.png" alt="에스프레소" class="img">
+
+        
       </div>
       <div class="item smoothie">
         <!-- 스무디&프라페 메뉴 -->
         <h2>스무디&프라페 메뉴</h2>
-        <img src="Photo/딸기쿠키프라페.png" alt="딸기쿠키프라페.png" class="img">
-        <img src="Photo/유니콘프라페.png" alt="유니콘프라페.png" class="img">
-        <img src="Photo/망고요거트스무디.png" alt="망고요거트스무디.png" class="img">
-        <img src="Photo/딸기퐁크러쉬.png" alt="딸기퐁크러쉬.png" class="img">
-        <img src="Photo/쿠키프라페.png" alt="쿠키프라페.png" class="img">
-        <img src="Photo/녹차프라페.png" alt="녹차프라페.png" class="img">
+        <img src="Photo/리얼초코프라페.png" alt="리얼초코프라페" class="img">
+        <img src="Photo/딸기쿠키프라페.png" alt="딸기쿠키프라페" class="img">
+        <img src="Photo/유니콘프라페.png" alt="유니콘프라페" class="img">
+        <img src="Photo/딸기퐁크러쉬.png" alt="딸기퐁크러쉬" class="img">
+        <img src="Photo/쿠키프라페.png" alt="쿠키프라페" class="img">
+        <img src="Photo/녹차프라페.png" alt="녹차프라페" class="img">
+        <img src="Photo/딸기요거트스무디.png" alt="딸기요거트스무디" class="img">
+        <img src="Photo/망고요거트스무디.png" alt="망고요거트스무디" class="img">
+
       </div>
 
       <div class="item ade">
         <!-- 에이드&주스 메뉴 -->
         <h2>에이드&주스 메뉴</h2>
-        <img src="Photo/블루레몬에이드.png" alt="블루레몬에이드.png" class="img">
-        <img src="Photo/자몽에이드.png" alt="자몽에이드.png" class="img">
-        <img src="Photo/라임모히또.png" alt="라임모히또.png" class="img">
-        <img src="Photo/딸기주스.png" alt="딸기주스.png" class="img">
-        <img src="Photo/딸기바나나주스.png" alt="딸기바나나주스.png" class="img">
-        <img src="Photo/레드오렌지자몽주스.png" alt="레드오렌지자몽주스.png" class="img">
+        <img src="Photo/블루레몬에이드.png" alt="블루레몬에이드" class="img">
+        <img src="Photo/라임모히또.png" alt="라임모히또" class="img">
+        <img src="Photo/자몽에이드.png" alt="자몽에이드" class="img">
+        <img src="Photo/레몬에이드.png" alt="레몬에이드" class="img">
+        <img src="Photo/딸기주스.png" alt="딸기주스" class="img">
+        <img src="Photo/레드오렌지자몽주스.png" alt="레드오렌지자몽주스" class="img">
+        <img src="Photo/딸기바나나주스.png" alt="딸기바나나주스" class="img">
+        <img src="Photo/샤인머스캣그린주스.png" alt="샤인머스캣그린주스" class="img">
 
       </div>
       <div class="item tea">
         <!-- 티 메뉴 -->
         <h2>티 메뉴</h2>
-        <img src="Photo/녹차.png" alt="녹차.png" class="img">
-        <img src="Photo/제로복숭아아이스티.png" alt="제로복숭아아이스티.png" class="img">
-        <img src="Photo/얼그레이.png" alt="얼그레이.png" class="img">
-        <img src="Photo/사과유자차.png" alt="사과유자차.png" class="img">
-        <img src="photo/레몬차ice.png" alt="레몬차ice" class="img">
-        <img src="photo/레몬차ice.png" alt="레몬차ice" class="img">
+        <img src="Photo/녹차.png" alt="녹차" class="img">
+        <img src="Photo/제로복숭아아이스티.png" alt="제로복숭아아이스티" class="img">
+        <img src="Photo/레몬차ice.png" alt="레몬차ice" class="img">
+        <img src="Photo/자몽차.png" alt="레몬차ice" class="img">
+        <img src="Photo/허니자몽블랙티.png" alt="허니자몽블랙티" class="img">
+        <img src="Photo/유자차.png" alt="유자차" class="img">
+        <img src="Photo/얼그레이.png" alt="얼그레이" class="img">
+        <img src="Photo/사과유자차.png" alt="사과유자차" class="img">
+        
+ 
       </div>
       <div class="item dessert">
         <!-- 디저트 메뉴 -->
         <h2>디저트 메뉴</h2>
-        <img src="Photo/초코무스케익.png" alt="초코무스케익.png" class="img">
-        <img src="Photo/티라미수케익.png" alt="티라미수케익.png" class="img">
-        <img src="Photo/허니브레드.png" alt="허니브레드.png" class="img">
-        <img src="Photo/아이스허니와앙슈.png" alt="아이스허니와앙슈.png" class="img">
-        <img src="Photo/버터버터소금빵.png" alt="버터버터소금빵.png" class="img">
-        <img src="Photo/버터버터소금빵.png" alt="버터버터소금빵.png" class="img">
+        <img src="Photo/초코무스케익.png" alt="초코무스케익" class="img">
+        <img src="Photo/티라미수케익.png" alt="티라미수케익" class="img">
+        <img src="Photo/허니브레드.png" alt="허니브레드" class="img">
+        <img src="Photo/버터버터소금빵.png" alt="버터버터소금빵" class="img">
+        <img src="Photo/아이스허니와앙슈.png" alt="아이스허니와앙슈" class="img">
+        <img src="Photo/아이스 딸기라떼 와앙 슈.png" alt="아이스 딸기라떼 와왕 슈" class="img">
+        <img src="Photo/초코스모어쿠키.png" alt="초코스모어쿠키" class="img">
+        <img src="Photo/말차스모어쿠키.png" alt="말차스모어쿠키" class="img">
       </div>
     </div>
   </div>
