--- a/KioskMenu.html
+++ b/KioskMenu.html
@@ -25,7 +25,7 @@
       <div class="item decaf active"> <!--active 추가-->
         <!-- 추천 메뉴 -->
         <h2>추천 메뉴</h2>
-        <div class="scrollBar"><!--스크롤-->
+        <div class="scrollBar"><!--스크롤!-->
           <p><!--스크롤-->
         <!--이미지 스타일 지우고 클래스명 지정 후 css로옮김-->
         <img src="Photo/코코넛커피스무디.png" alt="코코넛커피스무디" class="img" onclick="addFunction('코코넛커피스무디')">
