메뉴 클릭시 출력 및 세로 정렬/ 화면 비율 정리

--- a/KioskMenu.html
+++ b/KioskMenu.html
@@ -20,12 +20,11 @@
       <div class="category dessert" onclick="showCategory('dessert')">디저트</div>
     </div>
 
-
     <div id="menu-items">
       <div class="item decaf active"> <!--active 추가-->
         <!-- 추천 메뉴 -->
         <h2>추천 메뉴</h2>
-        <div class="scrollBar"><!--스크롤!-->
+        <div class="scrollBar">
           <p><!--스크롤-->
         <!--이미지 스타일 지우고 클래스명 지정 후 css로옮김-->
         <img src="Photo/코코넛커피스무디.png" alt="코코넛커피스무디" class="img" onclick="addFunction('코코넛커피스무디')">
@@ -42,6 +41,7 @@
         <img src="Photo/아이스허니와앙슈.png" alt="아이스허니와앙슈" class="img" onclick="addFunction('아이스허니와앙슈')">
       </div>
        </p><!--스크롤-->
+      </div>
   </div><!--스크롤-->
  
       <div class="item coffee">
@@ -165,9 +165,7 @@
     </p><!--스크롤-->
   </div><!--스크롤-->
     </div>
-  </div>
-
-
+ 
 
   
   <ul id="footer"> <!--ul 이름 지정-->
@@ -188,6 +186,8 @@
     </div>
   </ul>
 </div>
+</div>
+
 
 <script src="JS_/change.js"></script>
 <script src="JS_/payment.js"></script> 
