[fix] css적용 안된 버그 수정

--- a/KioskMenu.html
+++ b/KioskMenu.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kiosk</title>
-  <link rel="stylesheet" href="CSS_/styles.css">
-  <link rel="stylesheet" href="CSS_/MenuList.css">
+  <link rel="stylesheet" href="CSS/styles.css">
+  <link rel="stylesheet" href="CSS/MenuList.css">
 </head>
 
 <body>
